gfont not loading on ios, bugfix

--- a/wp-content/themes/vf/scss/_responsive.scss
+++ b/wp-content/themes/vf/scss/_responsive.scss
@@ -96,6 +96,7 @@
 		padding-right: 20px;
 	}
 	.hero {
+	    min-height: 82vh;//not 100, since we want 2nd section to show a little;may help initiate scroll
 	    p {
 	        width: 560px;
 	        margin-bottom: 40px;
@@ -310,8 +311,10 @@ input[type="submit"] {
 }//end
 
 
-/* .menu-toggle */
 @media  screen and (max-width: 480px) { 
+	.site-header .site-branding .site-logo{
+		width: 165px;
+	}
 	.hero h2 {font-size:1.75em;}
 	home-cta, .footer-cta {
 		padding: 10px 0 20px;
@@ -324,7 +327,5 @@ input[type="submit"] {
 		  padding: 30px 0;
 	}
 }//end
-
-
 
 
